--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="outer"></div>
-    <script src="js/consts.js"></script>
-    <script src="js/render.js"></script>
-    <script src="js/solution.js"></script>
-    <script src="js/index.js"></script>
+<div class="outer"></div>
+<script src="js/consts.js"></script>
+<script src="js/render.js"></script>
+<script src="js/visualizeSolution.js"></script>
+<script src="js/solution.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
